# EG_optimiser

./: LICENSE  README.md  eg_optimizers.py  example.ipynb  pyproject.toml
optim_eg/: adamw_eg.py  init_tools.py  sgd_eg.py  split_bias.py
